@startuml database-physical-analytics
allowmixing

top to bottom direction
skinparam shadowing false
skinparam roundcorner 0
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam defaultFontSize 10
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam nodesep 50
skinparam ranksep 55
skinparam packagePadding 12

skinparam entity {
  BackgroundColor #FEFECE
  BorderColor black
}
skinparam package {
  BackgroundColor white
  BorderColor black
  FontStyle bold
}
skinparam note {
  BackgroundColor #FFFFCC
  BorderColor black
}

title Физическая модель — analytics-service (PostgreSQL report_pg)

hide circle
hide methods

package "Внешние системы" as P_EXT #F0F0F0 {

  entity "users\n<<auth-service>>" as users_ext #DDDDDD {
    * **id** : UUID <<PK>>
  }

  entity "user-service\n<<Feign>>" as user_ext #DDDDDD {
    api : REST via gateway
  }

  entity "GigaChat API\n<<external>>" as giga #DDDDDD {
    role : AI-обогащение analysis
  }
}

package "PostgreSQL · report_pg :5433" as P_PG #F8FCFF {

  entity "report_snapshots" as rs {
    * **id** : BIGSERIAL <<PK>>
    --
    * user_id : UUID
    * period_from : TIMESTAMP
    * period_to : TIMESTAMP
    * created_at : TIMESTAMP
    * report_data : JSONB
    ..
    idx_report_snapshots_user_id
  }
}

users_ext -[hidden]right- user_ext
user_ext -[hidden]right- giga
P_EXT -[hidden]down- P_PG

users_ext ..> rs : user_id
user_ext ..> rs : данные за период
giga ..> rs : analysis

note right of rs
  **report_data (JSONB):**
  user, medicine[], wellbeing[],
  foodSymptoms[], analysis
  (symptoms, products,
  dangerousProteins,
  traceElements,
  doctorRecommendations)
end note

note bottom of user_ext
  GET /api/user/info
  GET /api/feelings/*
  GET /api/food-analyzer/analyze
end note

note bottom of P_PG
  PDF не хранится в БД (Jasper on-demand).
  MongoDB не используется.
end note

@enduml
